# fumo

./: CMakeLists.txt  main.cpp
cmake/: Dependencies.cmake
fumo/: CMakeLists.txt
fumo/api/fumo/: fumo.hpp
fumo/include/fumo/: fumo.hpp
fumo/platform/: CMakeLists.txt
fumo/platform/include/fumo/platform/: window.hpp
fumo/platform/src/: window.cpp
fumo/src/: fumo.cpp
fumo/src/fumo/platform/: CMakeLists.txt  window.cpp  window.hpp
sandbox/example/: CMakeLists.txt  main.cpp
